# BibMedEd

./: .gitignore  404.html  Full Search Strategy.docx  LICENSE  README.md  Yapay zekanın tıp eğitimi müfredatına entegrasyonu üzerine bibliometrik bir analiz yapmak oldukça güncel ve önemli bir konu.docx  index.html  mkdocs.yml  render.yaml  sitemap.xml
bibmeded/: .env.example  .gitignore  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
bibmeded/alembic/: env.py
bibmeded/alembic/versions/: 001_initial_schema.py  002_add_methodology_steps.py  003_fix_cascade_and_schema.py
bibmeded/app/: config.py  database.py  main.py
bibmeded/app/adapters/: base.py  openalex.py  pubmed.py  registry.py
bibmeded/app/analysis/: __init__.py  authors.py  citations.py  countries.py  journals.py  keywords.py  publications.py  utils.py
bibmeded/app/models/: __init__.py  analysis.py  author.py  citation.py  journal.py  keyword.py  project.py  (+2 more)
bibmeded/frontend/: package-lock.json  package.json
bibmeded/scripts/: reset_db.py
bibmeded/tests/: conftest.py  test_adapters_base.py  test_adapters_openalex.py  test_adapters_pubmed.py  test_adapters_registry.py  test_analysis_authors.py  test_analysis_citations.py  test_analysis_countries.py  test_analysis_journals.py  test_analysis_keywords.py  test_analysis_publications.py  test_cleaning.py  test_icite.py  test_methodology.py  test_models.py  test_pubmed.py  test_routers_adapters.py  test_routers_analysis.py  test_routers_projects.py  test_routers_publications.py  test_routers_search.py  test_xml_parser.py
(+46 files in other folders)
