[project]
name = "bibmeded"
version = "0.1.0"
description = "Bibliometric Analysis Platform for Medical Education"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "pandas>=2.0.0",
    "networkx>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "pytest-cov>=5.0.0",
]
docs = [
    "mkdocs-material>=9.0.0",
]
